# RayZen

./: .gitignore  README.md  install_requirements.sh
RayZen/: .dockerignore  CMakeLists.txt  Dockerfile
RayZen/include/: BVH.h  Camera.h  GameObject.h  HitRecord.h  Light.h  Logger.h  Material.h  Mesh.h  Ray.h  Scene.h  ShaderUtils.h  Sphere.h
RayZen/scripts/: capture_second_frame.sh
RayZen/shaders/: editor_fragment.glsl  editor_vertex.glsl  fragment_shader.glsl  shader.fs  shader.vs  vertex_shader.glsl
RayZen/src/: BVH.cpp  Material.cpp  Mesh.cpp  main.cpp
docs/: TECHNICAL_DETAILS.md
